# tutorial-rust-site-monitoring-cli

./: Cargo.toml  README.md
.github/: release-drafter.yml
.github/workflows/: code-quality.yml  release.yml
src/: lib.rs  main.rs
