[package]
name = "tutorials-rust-site-monitoring-cli"
version = "0.1.0"
edition = "2021"
authors = ["Ulises Himely <hi@ulises.codes>"]
repository = "https://github.com/ulises-codes/tutorial-rust-site-monitoring-cli"
description = "A basic site monitoring CLI that accepts one or more sitemaps, pings each url, and returns results"
keywords = ["site monitoring"]
license = "MIT"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "site-monitor"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.20", features = ["json"] }
roxmltree = "0.18.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
